Update IFX_FLAGS in VSCode tasks and add results for macrogrid solver

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
                 "options": {
                     "cwd": "${workspaceFolder}",
                     "env": {
-                        "IFX_FLAGS": "-O3 -fast"
+                        "IFX_FLAGS": "-O3"
                     }
                 }
             },
