Fix command syntax in VSCode tasks for proper environment variable usage

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,7 +38,7 @@
                 "command": "bash",
                 "args": [
                     "-c",
-                    "mkdir -p build && gfortran ${env:GFORTRAN_FLAGS} \"${file}\" -o \"build/${fileBasenameNoExtension}\" && \"./build/${fileBasenameNoExtension}\""
+                    "mkdir -p build && gfortran $GFORTRAN_FLAGS \"${file}\" -o \"build/${fileBasenameNoExtension}\" && \"./build/${fileBasenameNoExtension}\""
                 ],
                 "options": {
                     "cwd": "${workspaceFolder}",
