Enhance performance by optimizing IFX_FLAGS and refactoring macrogrid allocation in main program

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
                 ],
                 "options": {
                     "env": {
-                        "IFX_FLAGS": "-xHost"
+                        "IFX_FLAGS": "-O3 -xHost -qopenmp"
                     }
                 }
             },
